# Aquatones-ALETHEIA

./: .gitignore  AletheiaBridge.mojo  CMakeLists.txt  INTEGRATION_GUIDE.md  OPTIMIZATION.md  README.md  VICTORY01.md  audit_engine.mojo  bank_audit_certificate.json  command_run_city_dashboard.mojo  environment_install.sh  lakefile.lean  pixi.toml  run_aletheia.sh  run_aquaculture_sim.mojo  run_city_dashboard.mojo  run_hybrid_sim.mojo  run_nagasaki.mojo  run_nagasaki_polyglot.mojo  run_nagasaki_pricing.mojo  run_physics.mojo  run_physics_polyglot.mojo  run_test.sh  test_interface.mojo  test_scilean_ffi.mojo
doc/ALETHEIA-BIBLE/: all.md  pre.md  prepre.md
doc/business_requirement/: br01.md
doc/system_feature/: system_feature.md
doc/test_SciLean/: test_01.md
docs/: 2.md  Lean 4 + C++ 統合ビルド・ドキュメント.md  Lean 4 + SciLean + C++ 統合・完全攻略ガイド.md  first_build.md  仮想実務運営：キッチンカー店主・田中さんの「勝利のタイムライン」.md  長崎シティOS構想：熱力学デジタルツイン実装報告書.md  長崎スタジアムシティ・エコノミクス：デジタルツイン実装報告書 (Rev. 2).md  長崎スタジアムシティ・エコノミクス：デジタルツイン実装報告書-THEORY-EXPLAINED.md  長崎スタジアムシティ・エコノミクス：デジタルツイン実装報告書.md  長崎スタジアムシティ・エコノミクス：数理モデル解読書.md  📄 技術ドキュメント：ハイブリッド物理エンジン・プロトタイプ.md  📑 Nagasaki City OS 開発白書：フェーズ2 実装完了報告.md  🧪 テスト計画：ABI 整合性マトリックス.md
examples/: dojo_local_test.mojo
mojo/: abi_probe.mojo  biomass_audit.mojo  generate_cert.mojo  tdd_test.mojo
physics_engine/: PhysicsOracle.lean  README.md  SimpleOracle.lean  lake-manifest.json  lakefile.lean  lakefile.toml
src/: SimpleOracle.lean  SimpleOracle.lean.config  SimpleOracle.lean.config2  bridge.cpp  main.cpp  runtime_bridge.cpp  voxel_gpu.cu
